// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`alt.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[Image-reference]: a.png
[   Image reference with \`\`backtick\`\`   ]: a.png
[   Image reference with \`\`backtick \`   ]: a.png

<!-- backtick -->
- ![   Image alt with \`\`backtick\`\`   ](a.png)
- ![   Image alt with \`\`backtick \`   ](a.png)
- ![   Image reference alt with \`\`backtick\`\`   ][Image-reference]
- ![   Image reference alt with \`\`backtick \`   ][Image-reference]
- ![   Image reference with \`\`backtick\`\`   ][]
- ![   Image reference with \`\`backtick \`   ][]

<!-- square brackets -->
- ![   Image alt with [ square brackets ]   ](a.png)
- ![   Image alt with [[square brackets]]   ](a.png)
- ![   Image alt with [ square brackets ]   ][Image-reference]
- ![   Image alt with [[square brackets]]   ][Image-reference]

=====================================output=====================================
[Image-reference]: a.png
[ Image reference with \`\`backtick\`\` ]: a.png
[ Image reference with \`\`backtick \` ]: a.png

<!-- backtick -->

- ![   Image alt with \`\`backtick\`\`   ](a.png)
- ![   Image alt with \`\`backtick \`   ](a.png)
- ![   Image reference alt with \`\`backtick\`\`   ][Image-reference]
- ![   Image reference alt with \`\`backtick \`   ][Image-reference]
- ![ Image reference with \`\`backtick\`\` ][]
- ![ Image reference with \`\`backtick \` ][]

<!-- square brackets -->

- ![   Image alt with [ square brackets ]   ](a.png)
- ![   Image alt with [[square brackets]]   ](a.png)
- ![   Image alt with [ square brackets ]   ][Image-reference]
- ![   Image alt with [[square brackets]]   ][Image-reference]

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
![hello](http://example.com/image.png)

=====================================output=====================================
![hello](http://example.com/image.png)

================================================================================
`;

exports[`title.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
![hello](http://example.com/image.png "title")

=====================================output=====================================
![hello](http://example.com/image.png "title")

================================================================================
`;
